--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "yiiplus/yii2-smser",
     "description": "YiiPlus Smser",
-    "type": "yii2-extension",
     "keywords": ["yii2", "smser"],
-    "license": "BSD-3-Clause",
     "homepage": "https://github.com/yiiplus/",
+    "type": "yii2-extension",
+    "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/yiiplus/yii2-smser/issues?state=open",
+        "issues": "https://github.com/yiiplus/yii2-smser/issues",
         "source": "https://github.com/yiiplus/yii2-smser"
     },
     "authors": [
@@ -15,17 +15,19 @@
             "email": "87003637@qq.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.1.0",
         "yiisoft/yii2": "^2.0.0"
     },
     "require-dev": {
-        "yiisoft/yii2-debug": "~2.0.0",
-        "yiisoft/yii2-gii": "~2.0.0",
-        "yiisoft/yii2-faker": "~2.0.0"
+        "yiisoft/yii2-codeception": "^2.0.0",
+        "phpunit/phpunit": "~4.0"
     },
-    "config": {
-        "process-timeout": 3600
+    "autoload": {
+        "psr-4": {
+            "yiiplus\\smser\\": ""
+        }
     },
     "repositories": {
         "packagist": {
