--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,21 @@
 {
-    "name": "yiiplus/yii2-smser",
-    "description": "YiiPlus Smser",
-    "type": "yii2-extension",
-    "keywords": ["yii2", "smser"],
-    "license": "BSD-3-Clause",
-    "homepage": "https://github.com/yiiplus/",
-    "support": {
-        "issues": "https://github.com/yiiplus/yii2-smser/issues?state=open",
-        "source": "https://github.com/yiiplus/yii2-smser"
-    },
-    "authors": [
-        {
-            "name": "Hongbin Chen",
-            "email": "87003637@qq.com"
-        }
-    ],
-    "require": {
-        "php": ">=7.1.0",
-        "yiisoft/yii2": "^2.0.0"
-    },
-    "require-dev": {
-        "yiisoft/yii2-debug": "~2.0.0",
-        "yiisoft/yii2-gii": "~2.0.0",
-        "yiisoft/yii2-faker": "~2.0.0"
-    },
-    "config": {
-        "process-timeout": 3600
-    },
-    "repositories": {
-        "packagist": {
-            "type": "composer",
-            "url": "https://packagist.phpcomposer.com"
-        }
-    }
+	"name" : "moego/service-sms-php-yii-sdk",
+	"description" : "moego sms yii client",
+	"authors" : [{
+			"name" : "wuxiaoju",
+			"email" : "wuxiaoju@moego.com"
+		}
+	],
+	"minimum-stability" : "dev",
+	"require" : {
+		"php" : ">7.1"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "~5.7"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"Moego\\Sms\\" : "src/"
+		}
+	}
 }
